examples/type_system/failing/38_top_level_effect_rejected.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/38_top_level_effect_rejected.flx
// error[E413]: Top-Level Effect
//
// Effectful operation is not allowed at top level (requires: Console).
//
//   examples/type_system/failing/38_top_level_effect_rejected.flx:40:1
//    |
// 40 | print("top-level effect")
//    | ^^^^^^^^^^^^^^^^^^^^^^^^^
//    | ------------------------- top-level effectful expression
//
// Hint:
//   Move this code into `fn main() with ... { ... }`.
//
//
// error[E414]: Missing Main Function
//
// Effectful program is missing `fn main` root effect handler.
//
//   examples/type_system/failing/38_top_level_effect_rejected.flx:40:1
//    |
// 40 | print("top-level effect")
//    | ^^^^^^^^^^^^^^^^^^^^^^^^^
//    | ------------------------- effectful top-level execution
//
// Hint:
//   Define `fn main() with ... { ... }` and move execution there.
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E413
// expect-error: E414

// A4 matrix: effectful top-level expression is rejected.

print("top-level effect")
